Fixed a long standing big with the side menu. Now side menu and content box scrolls individually and correctly.

--- a/source/VizGurka/wwwroot/css/feature-content.css
+++ b/source/VizGurka/wwwroot/css/feature-content.css
@@ -6,8 +6,11 @@
   justify-content: center;
   align-items: center;
   width: fit-content;
+  max-height: 90vh;
+  height: 90vh;
   max-width: 75vw;
   min-width: 75vw;
+  overflow-y: scroll;
   background-color: white;
 }
 
