feat: Search functionality. Search params: Feature, Scenario, Rule, Tag. (#31)
* Refactor the Feature display page

* Start of a redesign of analytics

* refactor featuresLayout

* Removing redundant layouts and add indexlayout

* Replace _IndexLayout with a new _Layout file for improved structure

* Refactor layout structure

* Update layout reference and bind model properties in Index page

* Add localization support to Index page and log current culture

* Add Swedish and British English localization support for Index page

* Refactor CSS styles and remove unused JavaScript files

* Add localization support with English and Swedish cultures in Program.cs

* Remove Product page and update layout reference in Index page

* Remove Redundant Visual Studio solution file

* Searching now succesfully brings you to /search

* Now possible to search for feature names

* Home button on search page now works as expected

* Search can now handle presenting feature names and link accordingly

* Fixed null warnings

* search function now successfully handles Features and Scenarios

* Search functionality is now mvp in my opinion. Moving to Localization

* Lozalization for search

* added null-coalecence to handle warning

* Refactor search logic into methods

* Refactored the search count into its own method

* refactor search to remove a layer of if-indentation

* removed redundant method

* changed styling for search result

* Various merge issues fixed. Add tag search functionality. Needs more work

* Implement tag search functionality in search page

* Enhance tag search functionality and update UI components for better feature visibility

--- a/source/VizGurka/Pages/Features/Features.cshtml
+++ b/source/VizGurka/Pages/Features/Features.cshtml
@@ -7,6 +7,7 @@
     Layout = "~/Pages/Shared/_FeaturesLayout.cshtml";
 }
 <script src="~/js/dropdown.js" defer></script>
+<script src="~/js/search.js" defer></script>
 
 @functions {
     public string GetNavLinkClass(string page)
@@ -18,8 +19,11 @@
 
 <nav class="navbar">
     <img class="navbar_img" src="~/biggurka.png" alt="Gurka Logo" />
-    <input class="navbar_search" type="text" id="navbar_search"
-        placeholder="&#x1F50D; @Localizer["Features, Scenarios"]..." />
+    <form id="searchForm" class="navbar_search_form" method="get" onsubmit="return handleSearch(event)">
+        <input type="hidden" id="productName" name="productName" value="@Model.ProductName" />
+        <input class="navbar_search" type="text" id="navbar_search" name="query"
+            placeholder="&#x1F50D; @Localizer["Features, Scenarios"]..." />
+    </form>
     <ul class="navbar_links">
         <li class="navbar_links_link"><a class="@GetNavLinkClass("/features/features")" asp-page="/features/features"
                 asp-route-productName="@Model.ProductName" asp-route-id="@Model.Id">@Localizer["Features"]</a></li>
@@ -141,7 +145,7 @@
                     @foreach (var scenario in Model.SelectedFeature.Scenarios)
                     {
                         <hr />
-                        <h2 class="container_scenario_name">
+                        <h2 id="@scenario.Name-scenario" class="container_scenario_name">
                             <img class="container_scenario_status_img"
                                 src="~/icons/@(IconHelper.GetStatusIcon(scenario.Status)).svg" alt="status icon" />
                             @scenario.Name
@@ -210,13 +214,15 @@
                                 </ul>
                             }
                             <div class="scenario_rule_description" id="scenario_rule_description">
+
                                 @Model.MarkdownStringToHtml(rule.Description ?? string.Empty)</div>
+
                         </div>
                         <ul class="scenario_list">
                             @foreach (var scenario in rule.Scenarios)
                             {
                                 <hr />
-                                <h2 class="container_scenario_name">
+                                <h2 id="@scenario.Name-scenario" class="container_scenario_name">
                                     <img class="container_scenario_status_img"
                                         src="~/icons/@(IconHelper.GetStatusIcon(scenario.Status)).svg" alt="status icon" />
                                     @scenario.Name
