Markdown now parsing as expected.

--- a/source/VizGurka/Pages/Features/Features.cshtml
+++ b/source/VizGurka/Pages/Features/Features.cshtml
@@ -139,6 +139,7 @@
                         </ul>
                     }
                     <p class="content_container_duration">Test Duration: @Model.SelectedFeature.TestDuration</p>
+                    <div class="content_container_description">@Model.MarkdownStringToHtml(Model.SelectedFeature.Description ?? string.Empty)</div>
                 </div>
                 <h2 class="container_scenarios_title">Scenarios</h2>
                 <ul class="scenario_list">
