--- a/source/VizGurka/wwwroot/css/feature-content.css
+++ b/source/VizGurka/wwwroot/css/feature-content.css
@@ -31,7 +31,7 @@
   padding-left: 1.5vw;
 }
 
-.content_container_title{
+.content_container_title {
   font-size: 3rem;
   font-weight: 900;
   margin: 0;
@@ -56,11 +56,11 @@
   margin-bottom: 10px;
 }
 
-.tag{
+.tag {
   padding: 5px;
   margin: 5px;
   background-color: #f0f0f0;
-  box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.75);
   border-radius: 5px;
   font-weight: 700;
 }
@@ -70,7 +70,7 @@
   color: rgb(255, 255, 0);
 }
 
-.scenario_tags{
+.scenario_tags {
   margin-left: 0;
 }
 
@@ -79,7 +79,7 @@
   color: white;
 }
 
-.content_container_duration{
+.content_container_duration {
   font-size: 1.5rem;
   font-weight: 700;
   margin-bottom: 1rem;
@@ -88,7 +88,7 @@
   width: 95%;
 }
 
-.container_scenarios_title{
+.container_scenarios_title {
   font-size: 2.5rem;
   font-weight: 700;
   padding-left: 4vw;
@@ -96,60 +96,75 @@
   width: 50%;
 }
 
-.container_scenario_rule{
+.container_scenario_rule {
   font-size: 1.5rem;
   font-weight: 700;
   padding-left: 4vw;
   margin-bottom: 1rem;
 }
 
-.container_scenario_name{
+.container_scenario_name {
   font-size: 1.7rem;
 }
 
-.container_scenario_name h3{
+.container_scenario_name h3 {
   scroll-padding-top: -100px;
 }
 
-[id$="-rule"]{
+[id$="-rule"] {
   scroll-margin-top: 100px;
 }
 
-[id$="-scenario"]{
+[id$="-scenario"] {
   scroll-margin-top: 100px;
 }
 
-[id$="-tag"]{
+[id$="-tag"] {
   scroll-margin-top: 100px;
 }
 
-.scenario_rule_description p{
+.scenario_rule_description p {
   font-size: 1em;
   font-weight: 400;
   margin-bottom: 1rem;
 }
 
-.container_scenario_step{
+.container_scenario_step {
   font-size: 1.3rem;
   font-weight: 400;
   margin-bottom: 1rem;
 }
 
-.container_scenario_duration{
+.step_table {
+  background-color: rgb(167, 165, 165);
+  width: fit-content;
+  margin-top: 10px;
+  border: 1px solid black;
+}
+
+.step_table td {
+  padding: 10px;
+}
+
+.step_table tr {
+  background-color: white;
+}
+
+.container_scenario_duration {
   font-weight: 400;
 }
 
-.scenario_list{
+.scenario_list {
   padding-left: 4vw;
   width: 50%;
 }
 
-.container_scenario_status_img{
+.container_scenario_status_img {
   width: 20px;
   height: 20px;
 }
 
-.container_title_status_img{
+.container_title_status_img {
   width: 40px;
   height: 40px;
 }
