--- a/source/VizGurka/wwwroot/css/sidemenu.css
+++ b/source/VizGurka/wwwroot/css/sidemenu.css
@@ -2,39 +2,39 @@
     font-family:'atkinson';
     font-weight: 700;
     src:url("../fonts/Atkinson-Hyperlegible-Bold.woff2")format("woff2"),url("../fonts/Atkinson-Hyperlegible-Bold.woff")format("woff");
-  }
-  @font-face {
+}
+@font-face {
     font-family:'atkinson';
     font-style: italic;
     font-weight: 700;
     src:url("../fonts/Atkinson-Hyperlegible-BoldItalic.woff2")format("woff2"),url("../fonts/Atkinson-Hyperlegible-BoldItalic.woff")format("woff");
-  }
-  @font-face {
+}
+@font-face {
     font-family:'atkinson';
     font-style: italic;
     font-weight: 400;
     src:url("../fonts/Atkinson-Hyperlegible-Italic.woff2")format("woff2"),url("../fonts/Atkinson-Hyperlegible-Italic.woff")format("woff");
-  }
-  @font-face {
+}
+@font-face {
     font-family:'atkinson';
     font-weight: 400;
     src:url("../fonts/Atkinson-Hyperlegible-Regular.woff2")format("woff2"),url("../fonts/Atkinson-Hyperlegible-Regular.woff")format("woff");
-  }
-  
-  :root {
+}
+
+:root {
     --color-primary: #005795;
-  }
-  
-  .html, body {
+}
+
+.html, body {
     max-width: 100vw;
     max-height: 100%;
     overflow-x: hidden;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-  }
+}
 
-  body {
+body {
     font-family:'atkinson', sans-serif;
     background-color: var(--color-primary);
     color: black;
@@ -42,7 +42,7 @@
     max-width: 100%;
     margin: 0;
     padding: 0;
-  }
+}
 
 .product_section{
   display: flex;
@@ -65,6 +65,24 @@
   background-color: whitesmoke;
   border-right: 2px solid rgb(219, 219, 219);
   overflow-y: auto;
+}
+
+.sidemenu ul {
+  list-style-type: none;
+  padding-left: 0;
+}
+
+.feature-dropdown i{
+  margin-right: 20px;
+}
+
+.feature-dropdown span {
+  font-size: 1.4rem;
+  font-weight: 700;
+}
+
+.feature-dropdown a {
+  font-size: 1.6rem;
 }
 
 .sidemenu_title{
@@ -95,8 +113,9 @@
 }
 
 .feature-dropdown {
-  padding-left: 10px;
-  margin-bottom: 5px;
+  padding-left: 20px;
+  margin-bottom: 20px;
+  margin-top: 10px;
   display: flex;
   align-items: center;
 }
@@ -108,16 +127,18 @@
 
 .dropdown-content {
   max-height: 0;
-  display: none;
+  overflow: hidden;
   padding: 0 10px;
   margin-top: 5px;
   transition: max-height 0.5s ease-out;
 }
 
 .dropdown-content.show {
-  max-height: 500px;
-  padding-left: 10px;
-  display: block;
+  max-height: fit-content; /* Set a large enough value to accommodate the content */
+  overflow: visible;
+  margin-left: 10px;
+  margin-bottom: 10px;
+  border-left: 2px solid var(--color-primary);
 }
 
 .dropdown-content ul {
@@ -128,7 +149,7 @@
 
 .dropdown-content ul li {
   margin-bottom: 5px;
-  font-size: 1.1em;
+  font-size: 1.2rem;
   font-weight: 700;
 }
 
