--- a/source/VizGurka/Pages/Index.cshtml
+++ b/source/VizGurka/Pages/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@page
 @model IndexModel
+@using System.Globalization
 @using Microsoft.Extensions.Localization
 @inject IStringLocalizer<IndexModel> Localizer
 @{
@@ -19,15 +20,16 @@
         @Localizer["Please choose which product to review"]
       </h2>
       <div class="test_choice_box_link_container">
-        @foreach (var item in Model.UniqueProductNamesWithDatesAndId)
+        @foreach (var item in Model.UniqueProducts)
         {
           <a class="link" asp-page="/features/features" asp-route-productName="@item.ProductName" asp-route-id="@item.Id"
-            asp-route-featureId="@item.Id">
+            asp-route-featureId="@item.Id" asp-route-culture="@Model.CurrentCulture">
             <img id="randomCatImage_@item.ProductName" class="link_img" alt="Random Cat Image" />
             <h1 class="link_title">@item.ProductName</h1>
-            <h2 class="link_date">@item.LatestRunDate</h2>
+            <h2 class="link_date">@item.GetFormattedDateTime()</h2>
           </a>
         }
       </div>
     </div>
   </div>
+</div>
