trim whitespace from file paths and GitHub links in Features page

--- a/source/VizGurka/Pages/Features/Features.cshtml
+++ b/source/VizGurka/Pages/Features/Features.cshtml
@@ -116,6 +116,7 @@
                         var rawGithubLink = Model.GithubLink;
                         var rawCommitId = Model.CommitId;
                         var filePath = rawFilePath.StartsWith("/") ? rawFilePath.Replace("/", "") : rawFilePath.Replace("../", "");
+                        filePath = filePath.Replace(" ", "");
                         var githubLink = rawGithubLink.Replace(" ", "");
                         var commitId = rawCommitId.Replace(" ", "");
                         
