--- a/source/VizGurka/wwwroot/css/sidemenu.css
+++ b/source/VizGurka/wwwroot/css/sidemenu.css
@@ -1,28 +1,7 @@
-@font-face {
-    font-family:'atkinson';
-    font-weight: 700;
-    src:url("../fonts/Atkinson-Hyperlegible-Bold.woff2")format("woff2"),url("../fonts/Atkinson-Hyperlegible-Bold.woff")format("woff");
-}
-@font-face {
-    font-family:'atkinson';
-    font-style: italic;
-    font-weight: 700;
-    src:url("../fonts/Atkinson-Hyperlegible-BoldItalic.woff2")format("woff2"),url("../fonts/Atkinson-Hyperlegible-BoldItalic.woff")format("woff");
-}
-@font-face {
-    font-family:'atkinson';
-    font-style: italic;
-    font-weight: 400;
-    src:url("../fonts/Atkinson-Hyperlegible-Italic.woff2")format("woff2"),url("../fonts/Atkinson-Hyperlegible-Italic.woff")format("woff");
-}
-@font-face {
-    font-family:'atkinson';
-    font-weight: 400;
-    src:url("../fonts/Atkinson-Hyperlegible-Regular.woff2")format("woff2"),url("../fonts/Atkinson-Hyperlegible-Regular.woff")format("woff");
-}
 
-:root {
-    --color-primary: #005795;
+
+* {
+    font-family: 'Roboto', sans-serif;
 }
 
 .html, body {
