--- a/source/VizGurka/Pages/Features/Features.cshtml
+++ b/source/VizGurka/Pages/Features/Features.cshtml
@@ -13,19 +13,22 @@
             @if (Model.SelectedFeature != null)
             {
                 <div class="content_container_header">
-                    <h1 class="content_container_title">
-                        <img class="container_title_status_img"
-                            src="~/icons/@(IconHelper.GetStatusIcon(@Model.SelectedFeature.Status)).svg"
-                            alt="status icon" />
-                        @Model.SelectedFeature.Name
-                    </h1>
-                    @if (Model.SelectedFeature.FilePath != null)
-                    {
-                        var rawFilePath = Model.SelectedFeature.FilePath;
-                        var filePath = rawFilePath.StartsWith("/") ? rawFilePath.Replace("/", "") : rawFilePath.Replace("../", "");
-                        <a class="github_link" href="@Model.GithubLink/blob/@Model.CommitId/@filePath" target="_blank">
-                            <img class="github_icon" src="~/github.png" />@Localizer["GitHub"]</a>
-                    }
+                    <div class="title_and_link">
+                        <h1 class="content_container_title">
+                            <img class="container_title_status_img"
+                                src="~/icons/@(IconHelper.GetStatusIcon(@Model.SelectedFeature.Status)).svg"
+                                alt="status icon" />
+                            @Model.SelectedFeature.Name
+                        </h1>
+                        @if (Model.SelectedFeature.FilePath != null)
+                        {
+                            var rawFilePath = Model.SelectedFeature.FilePath;
+                            var filePath = rawFilePath.StartsWith("/") ? rawFilePath.Replace("/", "") :
+                            rawFilePath.Replace("../", "");
+                            <a class="github_link" href="@Model.GithubLink/blob/@Model.CommitId/@filePath" target="_blank">
+                                <i class="fa fa-github"></i>GitHub</a>
+                        }
+                    </div>
                     @if (Model.SelectedFeature.Tags.Any())
                     {
                         <ul class="tag_list">
@@ -49,6 +52,8 @@
                         </ul>
                     }
                     <p class="content_container_duration">Test Duration: @Model.SelectedFeature.TestDuration</p>
+                    <div class="content_container_description">
+                        @Model.MarkdownStringToHtml(@Model.SelectedFeature.Description ?? string.Empty)</div>
                 </div>
                 <h2 class="container_scenarios_title">Scenarios</h2>
                 <ul class="scenario_list">
@@ -86,9 +91,13 @@
                         @foreach (var step in scenario.Steps)
                         {
                             <div class="container_scenario_step">
-                                <img class="container_scenario_status_img"
-                                    src="~/icons/@(IconHelper.GetStatusIcon(step.Status)).svg" alt="status icon" />
                                 <strong>@step.Kind</strong> @step.Text
+                                @if (step.Table != null)
+                                {
+                                    <div class="container_scenario_table">
+                                        @Model.MarkdownStringToHtml(step.Table ?? "")
+                                    </div>
+                                }
                             </div>
                         }
                     }
@@ -163,9 +172,13 @@
                                 @foreach (var step in scenario.Steps)
                                 {
                                     <div class="container_scenario_step">
-                                        <img class="container_scenario_status_img"
-                                            src="~/icons/@(IconHelper.GetStatusIcon(step.Status)).svg" alt="status icon" />
                                         <strong>@step.Kind</strong> @step.Text
+                                        @if (step.Table != null)
+                                        {
+                                            <div class="container_scenario_table">
+                                                @Model.MarkdownStringToHtml(step.Table ?? "")
+                                            </div>
+                                        }
                                     </div>
                                 }
                             }
