--- a/source/VizGurka/wwwroot/css/sidemenu.css
+++ b/source/VizGurka/wwwroot/css/sidemenu.css
@@ -2,25 +2,18 @@
 
 * {
     font-family: 'Roboto', sans-serif;
+    color: #f3f3f3;
 }
 
 .html, body {
     max-width: 100vw;
     max-height: 100%;
     overflow-x: hidden;
+    overflow-y: hidden;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-}
-
-body {
-    font-family:'atkinson', sans-serif;
-    background-color: var(--color-primary);
-    color: black;
-    background-color: white;
-    max-width: 100%;
-    margin: 0;
-    padding: 0;
+    background-color: rgb(30, 33, 41);
 }
 
 .product_section{
@@ -37,15 +30,27 @@ body {
 .sidemenu {
   display: flex;
   flex-direction: column;
-  min-width: 25vw;
-  max-width: 25vw;
-  height: 90vh;
-  min-height: 90vh;
-  background-color: whitesmoke;
-  border-right: 2px solid rgb(219, 219, 219);
+  min-width: 15vw;
+  max-width: 15vw;
+  height: 89vh;
+  min-height: 89vh;
+  background-color: rgb(30, 33, 41);
   overflow-y: auto;
+  scrollbar-width: thin;
+  scrollbar-color: #3e4352 #14151a;
 }
 
+.sidemenu_header{
+  color: #E2E4E98F;
+  font-weight: 400;
+  margin-top: 25px;
+  margin-bottom: 0;
+}
+
+.sidemenu_title {
+  color: #f3f3f3;
+  background-color: rgb(30, 33, 41);
+}
 .sidemenu ul {
   list-style-type: none;
   padding-left: 0;
@@ -56,8 +61,9 @@ body {
 }
 
 .feature-dropdown span {
-  font-size: 1.4rem;
+  font-size: 1rem;
   font-weight: 700;
+  color: rgba(226, 228, 233, 0.82);
 }
 
 .feature-dropdown a {
@@ -92,11 +98,15 @@ body {
 }
 
 .feature-dropdown {
-  padding-left: 20px;
-  margin-bottom: 20px;
   margin-top: 10px;
   display: flex;
   align-items: center;
+}
+
+.feature-dropdown a {
+  text-decoration: none;
+  font-size: 1.1rem;
+  color: #f3f3f3;
 }
 
 .feature-dropdown h2 {
@@ -108,6 +118,10 @@ body {
   cursor: pointer;
 }
 
+.dropdown-trigger:hover {
+  color: #2977ff;
+}
+
 .dropdown-content {
   max-height: 0;
   overflow: hidden;
@@ -117,11 +131,21 @@ body {
 }
 
 .dropdown-content.show {
-  max-height: fit-content; /* Set a large enough value to accommodate the content */
+  max-height: fit-content;
+  width: fit-content;
   overflow: visible;
-  margin-left: 10px;
+  padding-left: 5px;
   margin-bottom: 10px;
-  border-left: 2px solid var(--color-primary);
+  border-left: 2px solid rgba(172, 169, 169, 0.151);
+}
+
+.dropdown-content.show ul li {
+  margin: 0;
+}
+
+.dropdown-content.show ul li img {
+  width: 15px;
+  margin-right: 5px;
 }
 
 .dropdown-content ul {
@@ -136,6 +160,16 @@ body {
   font-weight: 700;
 }
 
+.dropdown-content ul p {
+  margin-top: 5px;
+  margin-bottom: 0;
+  font-size: 0.8rem;
+  font-weight: 400;
+  color: #E2E4E9D1;
+}
+
+
+
 .scenario_link{
   display: flex;
   gap: 5px;
@@ -147,37 +181,25 @@ body {
 }
 
 .rule_sidebar{
-  font-weight: 900;
+  margin: 0;
+  font-weight: 500;
   font-size: 1.2em;
 }
 
 .rule_sidebar a{
   text-decoration: none;
-  color: var(--color-primary);
+  font-size: 1rem;
+}
+
+.rule_sidebar:hover {
+  color: #2977ff;
+}
+
+.rule_sidebar a:hover {
+  color: #2977ff;
 }
 
 .status_img{
-  width: 20px;
-  height: 20px;
+  width: 18px;
   margin-right: 5px;
-}
-
-.arrow {
-  border: solid black;
-  border-width: 0 5px 5px 0;
-  display: inline-block;
-  padding: 6px;
-  margin-right: 10px;
-  transition: transform 0.3s;
-  margin-right: 2vw;
-}
-
-.down {
-  transform: rotate(45deg);
-  -webkit-transform: rotate(45deg);
-}
-
-.right {
-  transform: rotate(-45deg);
-  -webkit-transform: rotate(-45deg);
 }
